disable vulnerabilityAlerts since meshcentral pins the dependency versions

--- a/renovate.json
+++ b/renovate.json
@@ -8,19 +8,16 @@
     "automerge": true,
     "packageRules": [
         {
-            "matchCategories": ["js"],
-            "matchPackageNames": ["!meshcentral"],
+            "matchCategories": [
+                "js"
+            ],
+            "matchPackageNames": [
+                "!meshcentral"
+            ],
             "enabled": false
         }
     ],
-    "postUpgradeTasks": {
-        "commands": [
-            "./sync_deps.js"
-        ],
-        "fileFilters": [
-            "package.json",
-            "pnpm-lock.yaml"
-        ],
-        "executionMode": "update"
+    "vulnerabilityAlerts": {
+        "enabled": false
     }
 }
